--- a/index.html
+++ b/index.html
@@ -5,63 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Anton|Nunito&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 class="jobs">Instrument</h1>
+    <h1 class="title">Companies I would like to work for</h1>
     <div class="wrapper">
         <div class="small-wrap">
+        <h1 class="jobs">Planet Argon</h1>
+        <ul>
+            <li>Smaller Company</li>
+            <li>Not into fake smiles/schomoozing does not accept project they don't believe in. </li>
+            <li>Open pet policy! I could bring my dog!</li>
+            <li>They have interships and dedicated to women in tech</li>
+        </ul>
+        <p>
+           <em> They do not appear to be on linkedIn but some of the workers are. I will be reaching out to one in the near future
+            and bookmarked the page to continue to look for job openings and the 8 week internships.</em>
+        </p>
+        </div>
+        <div class="small-wrap">
+                <h1 class="jobs">Instrument</h1>
     <ul>
         <li>Great health care including alternitive medicine</li>
         <li>Facilitates growth and devlopment including continues paid training.</li>
         <li>Is aware of inclusive practices</li>
         <li>Inbetween large and small company, and people my age</li>
     </ul>
-    <p>I have connected with them on linkedIn and hope to reach out for a coffee meetup in the near future with someone in the design technology area. Another bonus is they are 2 blocks from my home.</p>
+    <p><em>I have connected with them on linkedIn and hope to reach out for a coffee meetup in the near future with someone in the design technology area. Another bonus is they are 2 blocks from my home.</em></p>
     </div>
-    <div class="small-wrap">
+    <div class="small-wrap" id="short">
         <h1 class="jobs">Opal</h1>
         <ul>
             <li>Design intergrated first in the job postings for developers.</li>
             <li>Does code reviews and works together for clean code and great user experience</li>
             <li>Stumptown Coffee</li>
         </ul>
-        <p>I have connected via linkedIn</p>
+        <p><em> I have connected via linkedIn.</em></p>
     </div>
-        <div class="small-wrap"></div> 
-    <h1 class="jobs"></h1>
+        <div class="small-wrap">
+    <h1 class="jobs">Singlemind</h1>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Work part-time remote</li>
+                <li>Friendly dogs welcome</li>
+                <li>Education compensation</li>
             </ul>
             <p>
-
+               <em> Looked into them on linkedIn the only thing I do not like as much is they are in Lake Oswego but part time remote would be nice.</em>
             </p>
     </div>
-        <div class="small-wrap"></div> 
-    <h1 class="jobs"></h1>
+        <div class="small-wrap">
+    <h1 class="jobs">Daylight</h1>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Diverse</li>
+                <li>Collaboration and work balance</li>
+                <li>In industrial district</li>
             </ul>
             <p>
-
+              <em> Following via linkedIn</em>
             </p>
     </div>
-        <div class="small-wrap"></div> 
-    <h1 class="jobs"></h1>
+        <div class="small-wrap">
+    <h1 class="jobs">Filter</h1>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>UX design forward</li>
+                <li>Family like work enviroment</li>
+                <li>More women</li>
             </ul>
             <p>
-
+              <em> Following via linkedIn. They are based out of Seattle which is somewhere I may like to end up. </em>
             </p>
     </div>
     </div>
